tdf#161964 - sc Fix Lookup functions error with only-row reference

as a lookup_array parameter. ($1:$1)

Regression from commit: 85f733a9242339d8e92f992ff1ad6d1b99d3f383
(Related: tdf#160725 - Add horizontal binary search mode for SortedCache)

Change-Id: I3ef7c612e7bc92ecab81a3e52aed9873da907f16
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170221
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 46d55cf7960ecea3bc8af29f7a05159e5979c3ac)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170242
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>